@@ -18,21 +18,18 @@ package net.bull.javamelody;
 
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.spi.LoadState;
-import javax.persistence.spi.PersistenceProvider;
-import javax.persistence.spi.PersistenceProviderResolver;
-import javax.persistence.spi.PersistenceProviderResolverHolder;
-import javax.persistence.spi.PersistenceUnitInfo;
-import javax.persistence.spi.ProviderUtil;
-
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.spi.LoadState;
+import jakarta.persistence.spi.PersistenceProvider;
+import jakarta.persistence.spi.PersistenceProviderResolver;
+import jakarta.persistence.spi.PersistenceProviderResolverHolder;
+import jakarta.persistence.spi.PersistenceUnitInfo;
+import jakarta.persistence.spi.ProviderUtil;
 import net.bull.javamelody.internal.common.LOG;
 import net.bull.javamelody.internal.common.Parameters;
 import net.bull.javamelody.internal.model.Counter;
@@ -46,7 +43,7 @@ public class JpaPersistence implements PersistenceProvider {
 	private static final boolean COUNTER_HIDDEN = Parameters.isCounterHidden(JPA_COUNTER.getName());
 
 	/**
-	 * The name of the {@link javax.persistence.spi.PersistenceProvider} implementor
+	 * The name of the {@link jakarta.persistence.spi.PersistenceProvider} implementor
 	 * <p/>
 	 * See JPA 2 sections 9.4.3 and 8.2.1.4
 	 */
@@ -158,14 +155,8 @@ public class JpaPersistence implements PersistenceProvider {
 		final PersistenceProvider persistenceProvider = findDelegate(map);
 		final ClassLoader tccl = tccl();
 
-		final ClassLoader hack = AccessController.doPrivileged(new PrivilegedAction<ClassLoader>() { // pour findbugs
-			/** {@inheritDoc} */
-			@Override
-			public ClassLoader run() {
-				return new JpaOverridePersistenceXmlClassLoader(tccl,
-						persistenceProvider.getClass().getName());
-			}
-		});
+		final ClassLoader hack = new JpaOverridePersistenceXmlClassLoader(tccl,
+				persistenceProvider.getClass().getName());
 
 		Thread.currentThread().setContextClassLoader(hack);
 		try {
@@ -301,7 +292,8 @@ public class JpaPersistence implements PersistenceProvider {
 	}
 
 	private static PersistenceProvider newPersistence(final String name) throws Exception { // NOPMD
-		return PersistenceProvider.class.cast(tccl().loadClass(name).newInstance());
+		return PersistenceProvider.class
+				.cast(tccl().loadClass(name).getDeclaredConstructor().newInstance());
 	}
 
 	private static class ProviderAwareHandler implements InvocationHandler {
