@@ -27,7 +27,6 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -35,9 +34,8 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.TreeMap;
 
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletContext;
-
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletContext;
 import net.bull.javamelody.Parameter;
 import net.bull.javamelody.internal.model.TransportFormat;
 
@@ -81,10 +79,6 @@ public final class Parameters {
 	}
 
 	public static void initialize(ServletContext context) {
-		if ("1.6".compareTo(JAVA_VERSION) > 0) {
-			throw new IllegalStateException(
-					"La version java doit être 1.6 au minimum et non " + JAVA_VERSION);
-		}
 		servletContext = context;
 
 		dnsLookupsDisabled = Parameter.DNS_LOOKUPS_DISABLED.getValueAsBoolean();
@@ -168,16 +162,21 @@ public final class Parameters {
 
 	private static void writeCollectorApplications() throws IOException {
 		final Properties properties = new Properties();
-		final String monitoringPath = getMonitoringPath();
+		final String dummyUrl = "http://localhost";
+		final String urlSuffix = parseUrls(dummyUrl).get(0).toString().substring(dummyUrl.length());
 		for (final Map.Entry<String, List<URL>> entry : urlsByApplications.entrySet()) {
 			final List<URL> urls = entry.getValue();
 			assert urls != null && !urls.isEmpty();
 			final StringBuilder sb = new StringBuilder();
 			for (final URL url : urls) {
 				final String urlString = url.toString();
-				// on enlève le suffixe ajouté précédemment dans parseUrl
-				final String webappUrl = urlString.substring(0,
-						urlString.lastIndexOf(monitoringPath));
+				// on enlève le suffixe ajouté précédemment dans parseUrls
+				String webappUrl = urlString.substring(0, urlString.lastIndexOf(urlSuffix));
+				if (webappUrl.length() + urlSuffix.length() < urlString.length()) {
+					// on remet l'éventuel queryString comme avant parseUrls
+					webappUrl += "?"
+							+ urlString.substring(webappUrl.length() + urlSuffix.length() + 1);
+				}
 				if (webappUrl.indexOf(',') != -1) {
 					throw new IOException("The URL should not contain a comma.");
 				}
@@ -234,7 +233,7 @@ public final class Parameters {
 					applications.put(property, parseUrls(value));
 				} else {
 					aggregationApplications.put(property,
-							new ArrayList<>(Arrays.asList(value.split(","))));
+							new ArrayList<>(List.of(value.split(","))));
 				}
 			}
 		}
@@ -248,15 +247,10 @@ public final class Parameters {
 		for (final Iterator<List<String>> it1 = applicationsByAggregationApplications.values()
 				.iterator(); it1.hasNext();) {
 			final List<String> aggregatedApplications = it1.next();
-			for (final Iterator<String> it2 = aggregatedApplications.iterator(); it2.hasNext();) {
-				final String aggregatedApplication = it2.next();
-				if (!urlsByApplications.containsKey(aggregatedApplication)
-						&& !applicationsByAggregationApplications
-								.containsKey(aggregatedApplication)) {
-					// application aggrégée inconnue, on la supprime
-					it2.remove();
-				}
-			}
+			// on supprime les applications aggrégées inconnues
+			aggregatedApplications.removeIf(aggregatedApplication -> !urlsByApplications
+					.containsKey(aggregatedApplication)
+					&& !applicationsByAggregationApplications.containsKey(aggregatedApplication));
 			if (aggregatedApplications.isEmpty()) {
 				// application d'aggrégation vide, on la supprime
 				it1.remove();
@@ -284,10 +278,18 @@ public final class Parameters {
 		final List<URL> urls = new ArrayList<>(urlsArray.length);
 		for (final String s : urlsArray) {
 			String s2 = s.trim();
+			final String queryString;
+			if (s2.indexOf('?') != -1) {
+				// queryString is not url encoded here to create URL. URL encode it before if needed.
+				queryString = s2.substring(s2.indexOf('?') + 1);
+				s2 = s2.substring(0, s2.indexOf('?'));
+			} else {
+				queryString = null;
+			}
 			while (s2.endsWith("/")) {
 				s2 = s2.substring(0, s2.length() - 1);
 			}
-			final URL url = new URL(s2 + suffix);
+			final URL url = new URL(s2 + suffix + (queryString == null ? "" : "&" + queryString));
 			urls.add(url);
 		}
 		return urls;
@@ -450,43 +452,9 @@ public final class Parameters {
 			// ayant pour nom le contexte de la webapp et le nom du serveur
 			// pour pouvoir monitorer plusieurs webapps sur le même serveur et
 			// pour pouvoir stocker sur un répertoire partagé entre plusieurs serveurs
-			return getContextPath(servletContext) + '_' + getHostName();
+			return servletContext.getContextPath() + '_' + getHostName();
 		}
 		return null;
-	}
-
-	public static String getContextPath(ServletContext context) {
-		// cette méthode retourne le contextPath de la webapp
-		// en utilisant ServletContext.getContextPath si servlet api 2.5
-		// ou en se débrouillant sinon
-		// (on n'a pas encore pour l'instant de request pour appeler HttpServletRequest.getContextPath)
-		if (context.getMajorVersion() == 2 && context.getMinorVersion() >= 5
-				|| context.getMajorVersion() > 2) {
-			// api servlet 2.5 (Java EE 5) minimum pour appeler ServletContext.getContextPath
-			return context.getContextPath();
-		}
-		final URL webXmlUrl;
-		try {
-			webXmlUrl = context.getResource("/WEB-INF/web.xml");
-		} catch (final MalformedURLException e) {
-			throw new IllegalStateException(e);
-		}
-		String contextPath = webXmlUrl.toExternalForm();
-		contextPath = contextPath.substring(0, contextPath.indexOf("/WEB-INF/web.xml"));
-		final int indexOfWar = contextPath.indexOf(".war");
-		if (indexOfWar > 0) {
-			contextPath = contextPath.substring(0, indexOfWar);
-		}
-		// tomcat peut renvoyer une url commençant pas "jndi:/localhost"
-		// (v5.5.28, webapp dans un répertoire)
-		if (contextPath.startsWith("jndi:/localhost")) {
-			contextPath = contextPath.substring("jndi:/localhost".length());
-		}
-		final int lastIndexOfSlash = contextPath.lastIndexOf('/');
-		if (lastIndexOfSlash != -1) {
-			contextPath = contextPath.substring(lastIndexOfSlash);
-		}
-		return contextPath;
 	}
 
 	private static String getJavaMelodyVersion() {
@@ -498,11 +466,9 @@ public final class Parameters {
 
 		final Properties properties = new Properties();
 		try {
-			try {
+			try (inputStream) {
 				properties.load(inputStream);
 				return properties.getProperty("version");
-			} finally {
-				inputStream.close();
 			}
 		} catch (final IOException e) {
 			return e.toString();
