@@ -25,20 +25,19 @@ import static org.junit.Assert.assertNotNull;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import jakarta.servlet.ServletConfig;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import net.bull.javamelody.internal.common.Parameters;
 import net.bull.javamelody.internal.web.FilterServletOutputStream;
 
@@ -153,16 +152,14 @@ public class TestCollectorServlet {
 	 * @throws IOException e */
 	@Test
 	public void testDoPost() throws ServletException, IOException {
-		final List<String> nullUrl = Arrays.asList((String) null);
+		final List<String> nullUrl = Collections.singletonList(null);
 		doPost(null, nullUrl, false);
 		doPost(null, nullUrl, true);
 		doPost(TEST, nullUrl, true);
-		doPost(TEST, Arrays.asList("http://localhost:8090/test", "http://localhost:8090/test"),
-				true);
-		doPost(TEST, Arrays.asList("https://localhost:8090/test", "http://localhost:8090/test"),
-				true);
-		doPost(TEST, Arrays.asList("ftp://localhost:8090/test"), true);
-		doPost(TEST, Arrays.asList("http://une url,pas une url"), true);
+		doPost(TEST, List.of("http://localhost:8090/test", "http://localhost:8090/test"), true);
+		doPost(TEST, List.of("https://localhost:8090/test", "http://localhost:8090/test"), true);
+		doPost(TEST, List.of("ftp://localhost:8090/test"), true);
+		doPost(TEST, List.of("http://une url,pas une url"), true);
 	}
 
 	private void doPost(String appName, List<String> appUrlsList, boolean allowed)
