@@ -28,19 +28,18 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.lang.reflect.Field;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
-
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 
 import org.junit.Before;
 import org.junit.Test;
 
+import jakarta.servlet.ServletConfig;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import net.bull.javamelody.internal.common.HttpParameter;
 import net.bull.javamelody.internal.common.Parameters;
 import net.bull.javamelody.internal.web.FilterServletOutputStream;
@@ -78,13 +77,13 @@ public class TestReportServlet {
 	 * @throws IOException e */
 	@Test
 	public void testDoGet() throws ServletException, IOException {
-		doGet(Collections.<HttpParameter, String> emptyMap(), true);
+		doGet(Collections.emptyMap(), true);
 
 		setProperty(Parameter.ALLOWED_ADDR_PATTERN, "256.*");
 		try {
-			doGet(Collections.<HttpParameter, String> emptyMap(), false);
+			doGet(Collections.emptyMap(), false);
 			setProperty(Parameter.ALLOWED_ADDR_PATTERN, ".*");
-			doGet(Collections.<HttpParameter, String> emptyMap(), false);
+			doGet(Collections.emptyMap(), false);
 		} finally {
 			setProperty(Parameter.ALLOWED_ADDR_PATTERN, null);
 		}
@@ -93,8 +92,8 @@ public class TestReportServlet {
 	private void doGet(Map<HttpParameter, String> parameters, boolean checkResultContent)
 			throws IOException, ServletException {
 		final ServletContext parametersContext = createNiceMock(ServletContext.class);
-		expect(parametersContext.getMajorVersion()).andReturn(2).anyTimes();
-		expect(parametersContext.getMinorVersion()).andReturn(5).anyTimes();
+		expect(parametersContext.getMajorVersion()).andReturn(5).anyTimes();
+		expect(parametersContext.getMinorVersion()).andReturn(0).anyTimes();
 		expect(parametersContext.getContextPath()).andReturn(CONTEXT_PATH).anyTimes();
 		expect(parametersContext.getServletContextName()).andReturn("test webapp").anyTimes();
 		expect(parametersContext.getServerInfo()).andReturn("mock").anyTimes();
@@ -110,8 +109,8 @@ public class TestReportServlet {
 				Parameters.PARAMETER_SYSTEM_PREFIX + Parameter.DISABLED.getCode())).andReturn(null)
 						.anyTimes();
 		expect(config.getInitParameter(Parameter.DISABLED.getCode())).andReturn(null).anyTimes();
-		expect(context.getMajorVersion()).andReturn(2).anyTimes();
-		expect(context.getMinorVersion()).andReturn(5).anyTimes();
+		expect(context.getMajorVersion()).andReturn(5).anyTimes();
+		expect(context.getMinorVersion()).andReturn(0).anyTimes();
 		expect(context.getContextPath()).andReturn(CONTEXT_PATH).anyTimes();
 		final FilterContext filterContext = new FilterContext("Classic");
 		expect(context.getAttribute(ReportServlet.FILTER_CONTEXT_KEY)).andReturn(filterContext)
@@ -138,7 +137,7 @@ public class TestReportServlet {
 			}
 		}
 		expect(request.getHeaders("Accept-Encoding"))
-				.andReturn(Collections.enumeration(Arrays.asList("application/gzip"))).anyTimes();
+				.andReturn(Collections.enumeration(List.of("application/gzip"))).anyTimes();
 		final HttpServletResponse response = createNiceMock(HttpServletResponse.class);
 		final ByteArrayOutputStream output = new ByteArrayOutputStream();
 		expect(response.getOutputStream()).andReturn(new FilterServletOutputStream(output))
