@@ -20,17 +20,12 @@ package net.bull.javamelody;
 import java.io.IOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
-import java.util.Arrays;
 import java.util.EventListener;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 
-import javax.servlet.DispatcherType;
-import javax.servlet.FilterRegistration;
-import javax.servlet.ServletContext;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import javax.sql.DataSource;
 
 import org.aopalliance.intercept.MethodInvocation;
@@ -39,6 +34,7 @@ import org.springframework.aop.framework.autoproxy.DefaultAdvisorAutoProxyCreato
 import org.springframework.aop.support.Pointcuts;
 import org.springframework.aop.support.annotation.AnnotationMatchingPointcut;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
@@ -49,6 +45,9 @@ import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.boot.web.servlet.ServletListenerRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Role;
+import org.springframework.core.annotation.MergedAnnotation;
+import org.springframework.core.annotation.MergedAnnotations;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.scheduling.annotation.Schedules;
@@ -56,8 +55,14 @@ import org.springframework.scheduling.quartz.SchedulerFactoryBean;
 import org.springframework.stereotype.Controller;
 import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.client.RestTemplate;
+
+import jakarta.servlet.DispatcherType;
+import jakarta.servlet.FilterRegistration;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 /**
  * Spring Boot auto-configuration for JavaMelody.
@@ -82,8 +87,9 @@ import org.springframework.web.client.RestTemplate;
  */
 @Configuration
 @EnableConfigurationProperties(JavaMelodyConfigurationProperties.class)
-@ConditionalOnWebApplication
+@ConditionalOnWebApplication(type = ConditionalOnWebApplication.Type.SERVLET)
 @ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "enabled", matchIfMissing = true)
+@Role(BeanDefinition.ROLE_INFRASTRUCTURE)
 public class JavaMelodyAutoConfiguration {
 	/**
 	 * Name of the FilterRegistrationBean.
@@ -209,9 +215,9 @@ public class JavaMelodyAutoConfiguration {
 		// IMPORTANT: We cannot inject JavaMelodyConfigurationProperties here because of bean load order! Therefore we have
 		// to use that rather dirty way to inject the configuration value.
 		final SpringDataSourceBeanPostProcessor processor = new SpringDataSourceBeanPostProcessor();
-		if (excludedDatasources != null && excludedDatasources.trim().length() > 0) {
-			processor.setExcludedDatasources(
-					new HashSet<>(Arrays.asList(excludedDatasources.split(","))));
+		if (excludedDatasources != null && !excludedDatasources.trim().isEmpty()) {
+			processor
+					.setExcludedDatasources(new HashSet<>(List.of(excludedDatasources.split(","))));
 		}
 		return processor;
 	}
@@ -222,6 +228,7 @@ public class JavaMelodyAutoConfiguration {
 	 */
 	@Bean
 	@ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "spring-monitoring-enabled", matchIfMissing = true)
+	@Role(BeanDefinition.ROLE_INFRASTRUCTURE)
 	public MonitoringSpringAdvisor monitoringSpringAdvisor() {
 		return new MonitoringSpringAdvisor(monitoredWithSpringAnnotationPointcut);
 	}
@@ -232,9 +239,10 @@ public class JavaMelodyAutoConfiguration {
 	 */
 	@Bean
 	@ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "spring-monitoring-enabled", matchIfMissing = true)
+	@Role(BeanDefinition.ROLE_INFRASTRUCTURE)
 	public MonitoringSpringAdvisor monitoringSpringServiceAdvisor() {
 		return createMonitoringSpringAdvisorWithExclusions(
-				new AnnotationMatchingPointcut(Service.class),
+				new AnnotationMatchingPointcut(Service.class, true),
 				monitoredWithSpringAnnotationPointcut, asyncAnnotationPointcut,
 				scheduledAnnotationPointcut);
 	}
@@ -245,22 +253,10 @@ public class JavaMelodyAutoConfiguration {
 	 */
 	@Bean
 	@ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "spring-monitoring-enabled", matchIfMissing = true)
+	@Role(BeanDefinition.ROLE_INFRASTRUCTURE)
 	public MonitoringSpringAdvisor monitoringSpringControllerAdvisor() {
 		return createMonitoringSpringAdvisorWithExclusions(
-				new AnnotationMatchingPointcut(Controller.class),
-				monitoredWithSpringAnnotationPointcut, asyncAnnotationPointcut,
-				scheduledAnnotationPointcut);
-	}
-
-	/**
-	 * Monitoring of beans having the {@link RestController} annotation.
-	 * @return MonitoringSpringAdvisor
-	 */
-	@Bean
-	@ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "spring-monitoring-enabled", matchIfMissing = true)
-	public MonitoringSpringAdvisor monitoringSpringRestControllerAdvisor() {
-		return createMonitoringSpringAdvisorWithExclusions(
-				new AnnotationMatchingPointcut(RestController.class),
+				new AnnotationMatchingPointcut(Controller.class, true),
 				monitoredWithSpringAnnotationPointcut, asyncAnnotationPointcut,
 				scheduledAnnotationPointcut);
 	}
@@ -271,6 +267,7 @@ public class JavaMelodyAutoConfiguration {
 	 */
 	@Bean
 	@ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "spring-monitoring-enabled", matchIfMissing = true)
+	@Role(BeanDefinition.ROLE_INFRASTRUCTURE)
 	public MonitoringSpringAdvisor monitoringSpringAsyncAdvisor() {
 		return createMonitoringSpringAdvisorWithExclusions(asyncAnnotationPointcut,
 				monitoredWithSpringAnnotationPointcut, scheduledAnnotationPointcut);
@@ -283,6 +280,7 @@ public class JavaMelodyAutoConfiguration {
 	@Bean
 	@ConditionalOnProperty(prefix = JavaMelodyConfigurationProperties.PREFIX, name = "scheduled-monitoring-enabled", matchIfMissing = true)
 	@ConditionalOnMissingBean(DefaultAdvisorAutoProxyCreator.class)
+	@Role(BeanDefinition.ROLE_INFRASTRUCTURE)
 	public MonitoringSpringAdvisor monitoringSpringScheduledAdvisor() {
 		return createMonitoringSpringAdvisorWithExclusions(scheduledAnnotationPointcut,
 				monitoredWithSpringAnnotationPointcut, asyncAnnotationPointcut);
@@ -328,17 +326,20 @@ public class JavaMelodyAutoConfiguration {
 			protected String getRequestName(MethodInvocation invocation) {
 				final StringBuilder sb = new StringBuilder();
 				final Method method = invocation.getMethod();
-				final RequestMapping requestMapping = method.getAnnotation(RequestMapping.class);
-				if (requestMapping != null) {
-					String[] path = requestMapping.value();
-					if (path.length == 0) {
-						path = requestMapping.path();
-					}
+
+				final MergedAnnotations mergedAnnotations = MergedAnnotations.from(method,
+						MergedAnnotations.SearchStrategy.TYPE_HIERARCHY);
+				final MergedAnnotation<RequestMapping> requestMapping = mergedAnnotations
+						.get(RequestMapping.class);
+				if (requestMapping.isPresent()) {
+					String[] path = requestMapping.getStringArray("path");
 					if (path.length > 0) {
 						sb.append(path[0]);
 						sb.append(' ');
-						if (requestMapping.method().length > 0) {
-							sb.append(requestMapping.method()[0].name());
+						final RequestMethod[] requestMethods = requestMapping.getEnumArray("method",
+								RequestMethod.class);
+						if (requestMethods.length > 0) {
+							sb.append(requestMethods[0].name());
 						} else {
 							sb.append("GET");
 						}
